kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linguify-service
spec:
  selector:
    app: linguify-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
